2015-10-27  Joseph Myers  <joseph@codesourcery.com>

	* configure.ac (libc_cv_gcc___thread): Remove configure test.
	(libc_cv_gcc_tls_model_attr): Likewise.
	* configure: Regenerated.

	* configure.ac (libc_cv_need_minus_P): Remove configure test.
	* configure: Regenerated.
	* Makeconfig (asm-CPPFLAGS): Remove reference to -P in comment.

2015-10-26  Joseph Myers  <joseph@codesourcery.com>

	* configure.ac (old_glibc_headers): Remove configure test.
	* configure: Regenerated.
	* config.make.in (old-glibc-headers): Remove variable.
	* Makefile [!$(install_root) && $(old-glibc-headers) = yes]
	(install): Remove dependency on remove-old-headers.
	(headers2_0): Remove variable.
	(remove-old-headers): Remove rule.

	* configure.ac (libc_cv_dot_text): Remove configure test.
	(libc_cv_asm_set_directive): Use .text instead of
	${libc_cv_dot_text} in configure test.
	* configure: Regenerated.

2015-10-26  Florian Weimer  <fweimer@redhat.com>

	[BZ #19168]
	* sysdeps/x86_64/fpu/libm-test-ulps: Regenerated.

2015-10-26  Florian Weimer  <fweimer@redhat.com>

	* configure.ac (CXX): Clear the variable if the C++ toolchain does
	not support static linking.
	* configure: Regenerate.

2015-10-23  Joseph Myers  <joseph@codesourcery.com>

	* math/libm-test.inc (check_float_internal): Do not special-case
	errors up to 0.5 ulp.

	* math/auto-libm-test-in: Add more tests of log, log10, log1p and
	log2.
	* math/auto-libm-test-out: Regenerated.
	* math/libm-test.inc (MAX_EXP): New macro.
	(ilogb_test_data): Add more tests.
	(isfinite_test_data): Likewise.
	(isgreater_test_data): Likewise.
	(isgreaterequal_test_data): Likewise.
	(isinf_test_data): Likewise.
	(isless_test_data): Likewise.
	(islessequal_test_data): Likewise.
	(islessgreater_test_data): Likewise.
	(isnan_test_data): Likewise.
	(isnormal_test_data): Likewise.
	(issignaling_test_data): Likewise.
	(isunordered_test_data): Likewise.
	(j0_test_data): Likewise.
	(j1_test_data): Likewise.
	(jn_test_data): Likewise.